# LeetCodeSolutions

./: .gitignore  Cargo.toml  command.md
Code/CanPlaceFlowers/: main.rs  problem.md
Code/FindPivotIndex/: main.go  main.rs  problem.md
Code/FindtheDifferenceofTwoArrays/: main.go  main.rs
Code/FindtheHighestAltitude/: main.go  main.rs
Code/GreatestCommonDivisorofStrings/: main.go  main.js  main.rs
Code/KidsWiththeGreatestNumberofCandies/: main.rs
Code/MergeStringsAlternate/: main.js  main.ts
Code/NumberOfRecentCalls/: main.go  main.rs
Code/ReverseVowelsofaString/: main.go  main.rs
Code/ReverseWordsInaString/: main.go  main.rs
DB/Article Views I/: solution.sql
DB/Average Time of Process per Machine/: problem.md  solution.sql
DB/Avg Selling Price/: solution.sql
DB/Big Countries/: solution.sql
DB/Confirmation Rate/: solutions.sql
DB/Customer Who Visited but Did Not Make Any Transactions/: solution.sql
DB/Employee Bonus/: solution.sql
DB/Find Customer Referee/: problem.md  solution.sql
DB/Invalid Tweets/: problem.md  solution.sql
DB/Managers with at Least 5 Direct Reports/: solution.sql
DB/Not Boring Movies/: solution.sql
DB/Number of Unique Subjects Taught by Each Teacher/: solution.sql
DB/Product Sales Analysis I/: solution.sql
DB/Recyclable and Low Fat Products/: solution.sql
DB/Replace Employee ID With The Unique Identifier/: solution.sql
DB/Rising Temperature/: solution.sql
DB/Students and Examinations/: solution.sql
MergeStringsAlternate/: main.go  main.rs
