[package]
   name = "leetcode_solutions"
   version = "0.1.0"
   edition = "2021"

   [[bin]]
   name = "find_difference"
   path = "Code/FindtheDifferenceofTwoArrays/main.rs"

   [[bin]]
   name = "gcd_strings"
   path = "Code/GreatestCommonDivisorofStrings/main.rs"

   [[bin]]
   name = "reverse_words"
   path = "Code/ReverseWordsInaString/main.rs"

   [[bin]]
   name = "merge_strings_alternate"
   path = "Code/MergeStringsAlternate/main.rs"

   [[bin]]
   name = "find_height_altitude"
   path = "Code/FindtheHighestAltitude/main.rs"

   [[bin]]
   name = "find_pivot_index"
   path = "Code/FindPivotIndex/main.rs"

   [[bin]]
   name = "number_of_recent_calls"
   path = "Code/NumberOfRecentCalls/main.rs"

   [[bin]]
   name = "reverse_vowels_of_a_string"
   path = "Code/ReverseVowelsofaString/main.rs"

   [[bin]]
   name = "can_place_flowers"
   path = "Code/CanPlaceFlowers/main.rs"

   [[bin]]
   name = "kids_with_the_greatest_number_of_candies"
   path = "Code/KidsWiththeGreatestNumberofCandies/main.rs"